[package]
name = "ir-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
iced-x86 = { version = "1.18.0", default-features = false, features = ["std", "decoder", "instr_info"] }
anyhow = "1.0.68"
ir = { path = "../ir" }

[build-dependencies]
lalrpop = "0.19.7"


[[bin]]
path = "src/main.rs"
name = "generate-translator"

[lib]
path = "src/lib.rs"
name = "ir_translator"
